--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,14 +28,17 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  date_format: ^2.0.6
   flutter:
     sdk: flutter
   flutter_svg: ^1.0.3
+  flutter_tags: ^1.0.0-nullsafety.1
   fluttertoast: ^8.0.9
   font_awesome_flutter: ^10.1.0
   http: ^0.13.4
   quiver: ^3.0.1+1
   shared_preferences: ^2.0.13
+  sqflite: ^2.0.2+1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
