--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^1.0.3
-  flutter_tags: ^1.0.0-nullsafety.1
+  flutter_tags: ^0.4.9+1
   fluttertoast: ^8.0.9
   font_awesome_flutter: ^10.1.0
   http: ^0.13.4
